2007-07-12  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Factored out, corrected, and commented
	common code for reporting syntax errors in LEAF elements.

2007-07-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompCmds.c (TclCompileWhileCmd):
	* generic/tclCompile.c (TclCompileScript):
	Corrected faulty avoidance of INST_START_CMD when the first opcode
	in a script is within a loop (as produced by 'while 1'), so that
	the corresponding command is properly counted [Bug 1752146].

2007-07-11  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Added a "parseOnly" flag argument to
	ParseExpr() to indicate whether the caller is Tcl_ParseExpr(), with an
	end goal of filling a Tcl_Parse with Tcl_Tokens representing the
	parsed expression, or TclCompileExpr() with the goal of compiling and
	executing the expression.  In the latter case, more aggressive
	conversion of QUOTED and BRACED lexeme to literals is done.  In the
	former case, all such conversion is avoided, since Tcl_Token production
	would revert it anyway.  This enables simplifications to the
	GenerateTokensForLiteral() routine as well.

2007-07-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Added a field for operator precedence
	to be stored directly in the parse tree.  There's no memory cost to
	this addition, since that memory would have been lost to alignment
	issues anyway.  Also, converted precedence definitions and lookup
	tables to use symbolic constants instead of raw number for improved
	readability, and continued extending/improving/correcting comments.
	Removed some unused counter variables.  Renamed some variables for
	clarity and replaced some cryptic logic with more readable macros.

2007-07-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Revision so that the END lexeme never
	gets inserted into the parse tree.  Later tree traversal never reaches